--- a/parenting.html
+++ b/parenting.html
@@ -51,10 +51,10 @@ ul.task-list li input[type="checkbox"] {
       <!-- user-provided yaml closeread style options -->
       <style>
         :root {
-          --cr-narrative-text-color-sidebar: black;
---cr-section-background-color: white;
+          --cr-section-background-color: white;
 --cr-narrative-background-color-sidebar: white;
 --cr-narrative-background-color-overlay: grey;
+--cr-narrative-text-color-sidebar: black;
         }
       </style>
     
@@ -81,17 +81,17 @@ ul.task-list li input[type="checkbox"] {
 
 <div class="cr-section cr-column-screen sidebar-left">
 <div class="narrative-col">
-<div class="trigger new-trigger" data-focus-on="cr-positiveparenting" data-scale-by=".75" data-pan-to="0%,0%">
+<div class="trigger new-trigger" data-scale-by=".75" data-pan-to="0%,0%" data-focus-on="cr-positiveparenting">
 <div class="narrative">
 <p>Parents raise their children in a variety of ways.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-positiveparenting" data-scale-by="1.1" data-pan-to="0%,0%">
+<div class="trigger new-trigger" data-scale-by="1.1" data-pan-to="0%,0%" data-focus-on="cr-positiveparenting">
 <div class="narrative">
 <p>The objective of this study was to test the associations between 11 caregiver aggressive and nonaggressive discipline behaviors and outcomes (aggression, distraction, and prosocial peer relations) of children under 5 in low- and middle-income countries (LMICs).</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-mymap" data-scale-by="1.5">
+<div class="trigger new-trigger" data-scale-by="1.5" data-focus-on="cr-mymap">
 <div class="narrative">
 <ul>
 <li>Data came from the fourth (2009-2013) and fifth (2012-2017) rounds of the UNICEF Multiple Indicator Cluster Surveys (MICS).</li>
@@ -100,32 +100,32 @@ ul.task-list li input[type="checkbox"] {
 </ul>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-discipline" data-scale-by="1.0" data-pan-to="0%,0%">
+<div class="trigger new-trigger" data-scale-by="1.0" data-pan-to="0%,0%" data-focus-on="cr-discipline">
 <div class="narrative">
 <p>Different forms of discipline had different effects.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-discipline" data-scale-by="1.5" data-pan-to="50%,30%">
+<div class="trigger new-trigger" data-scale-by="1.5" data-pan-to="50%,30%" data-focus-on="cr-discipline">
 <div class="narrative">
 <p>Verbal reasoning (80%) and shouting (66%) were the most common parental discipline behaviors toward young children.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-discipline" data-scale-by="1.0" data-pan-to="0%,0%">
+<div class="trigger new-trigger" data-scale-by="1.0" data-pan-to="0%,0%" data-focus-on="cr-discipline">
 <div class="narrative">
 <p>Psychological and physical aggression had similar effects.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-discipline2" data-scale-by="1.0" data-pan-to="0%,0%">
+<div class="trigger new-trigger" data-scale-by="1.0" data-pan-to="0%,0%" data-focus-on="cr-discipline2">
 <div class="narrative">
 <p>Psychological and physical aggression were associated with higher child aggression.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-discipline3" data-scale-by="1.0" data-pan-to="0%,0%">
+<div class="trigger new-trigger" data-scale-by="1.0" data-pan-to="0%,0%" data-focus-on="cr-discipline3">
 <div class="narrative">
 <p>Verbal reasoning was associated with lower aggression and higher prosocial peer relations.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-discipline4" data-scale-by="1.0" data-pan-to="0%,0%">
+<div class="trigger new-trigger" data-scale-by="1.0" data-pan-to="0%,0%" data-focus-on="cr-discipline4">
 <div class="narrative">
 <p>Taking away privileges was associated with lower prosocial peer relations.</p>
 </div>
@@ -140,22 +140,22 @@ ul.task-list li input[type="checkbox"] {
 <p>However, the associations of discipline with child outcomes were still largely consistent across countries.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-positiveparenting" data-scale-by="1.25">
+<div class="trigger new-trigger" data-scale-by="1.25" data-focus-on="cr-positiveparenting">
 <div class="narrative">
 <p>Psychological and physical aggression were disadvantageous for children’s socio-emotional development across countries.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-positiveparenting" data-scale-by="1.5">
+<div class="trigger new-trigger" data-scale-by="1.5" data-focus-on="cr-positiveparenting">
 <div class="narrative">
 <p>Only verbal reasoning was associated with positive child socio-emotional development.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-positiveparenting" data-scale-by="1.75">
+<div class="trigger new-trigger" data-scale-by="1.75" data-focus-on="cr-positiveparenting">
 <div class="narrative">
 <p>No form of psychological aggression or physical aggression benefited child socioemotional development in any country.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-positiveparenting" data-scale-by=".75">
+<div class="trigger new-trigger" data-scale-by=".75" data-focus-on="cr-positiveparenting">
 <div class="narrative">
 <p>Greater emphasis should be dedicated to reducing parental use of psychological and physical aggression across cultural contexts.</p>
 </div>
