--- a/parenting.html
+++ b/parenting.html
@@ -36,6 +36,8 @@ ul.task-list li input[type="checkbox"] {
 <script src="parenting_files/libs/quarto-contrib/intersection-observer-polyfill-1.0.0/intersection-observer.js"></script>
 <script src="parenting_files/libs/quarto-contrib/scrollama-3.2.0/scrollama.min.js"></script>
 <script src="parenting_files/libs/quarto-contrib/closeread-0.1.0/closeread.js"></script>
+<link href="parenting_files/libs/quarto-contrib/social-share-1.0.0/social-share.css" rel="stylesheet">
+<link href="parenting_files/libs/quarto-contrib/social-share-1.0.0/all.min.css" rel="stylesheet">
 <meta cr-debug-mode="false">
 <meta cr-remove-header-space="false">
 
@@ -52,9 +54,9 @@ ul.task-list li input[type="checkbox"] {
       <style>
         :root {
           --cr-section-background-color: white;
---cr-narrative-background-color-sidebar: white;
 --cr-narrative-background-color-overlay: grey;
 --cr-narrative-text-color-sidebar: black;
+--cr-narrative-background-color-sidebar: white;
         }
       </style>
     
@@ -81,12 +83,12 @@ ul.task-list li input[type="checkbox"] {
 
 <div class="cr-section cr-column-screen sidebar-left">
 <div class="narrative-col">
-<div class="trigger new-trigger" data-scale-by=".75" data-pan-to="0%,0%" data-focus-on="cr-positiveparenting">
+<div class="trigger new-trigger" data-pan-to="0%,0%" data-scale-by=".75" data-focus-on="cr-positiveparenting">
 <div class="narrative">
 <p>Parents raise their children in a variety of ways.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-scale-by="1.1" data-pan-to="0%,0%" data-focus-on="cr-positiveparenting">
+<div class="trigger new-trigger" data-pan-to="0%,0%" data-scale-by="1.1" data-focus-on="cr-positiveparenting">
 <div class="narrative">
 <p>The objective of this study was to test the associations between 11 caregiver aggressive and nonaggressive discipline behaviors and outcomes (aggression, distraction, and prosocial peer relations) of children under 5 in low- and middle-income countries (LMICs).</p>
 </div>
@@ -100,32 +102,32 @@ ul.task-list li input[type="checkbox"] {
 </ul>
 </div>
 </div>
-<div class="trigger new-trigger" data-scale-by="1.0" data-pan-to="0%,0%" data-focus-on="cr-discipline">
+<div class="trigger new-trigger" data-pan-to="0%,0%" data-scale-by="1.0" data-focus-on="cr-discipline">
 <div class="narrative">
 <p>Different forms of discipline had different effects.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-scale-by="1.5" data-pan-to="50%,30%" data-focus-on="cr-discipline">
+<div class="trigger new-trigger" data-pan-to="50%,30%" data-scale-by="1.5" data-focus-on="cr-discipline">
 <div class="narrative">
 <p>Verbal reasoning (80%) and shouting (66%) were the most common parental discipline behaviors toward young children.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-scale-by="1.0" data-pan-to="0%,0%" data-focus-on="cr-discipline">
+<div class="trigger new-trigger" data-pan-to="0%,0%" data-scale-by="1.0" data-focus-on="cr-discipline">
 <div class="narrative">
 <p>Psychological and physical aggression had similar effects.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-scale-by="1.0" data-pan-to="0%,0%" data-focus-on="cr-discipline2">
+<div class="trigger new-trigger" data-pan-to="0%,0%" data-scale-by="1.0" data-focus-on="cr-discipline2">
 <div class="narrative">
 <p>Psychological and physical aggression were associated with higher child aggression.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-scale-by="1.0" data-pan-to="0%,0%" data-focus-on="cr-discipline3">
+<div class="trigger new-trigger" data-pan-to="0%,0%" data-scale-by="1.0" data-focus-on="cr-discipline3">
 <div class="narrative">
 <p>Verbal reasoning was associated with lower aggression and higher prosocial peer relations.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-scale-by="1.0" data-pan-to="0%,0%" data-focus-on="cr-discipline4">
+<div class="trigger new-trigger" data-pan-to="0%,0%" data-scale-by="1.0" data-focus-on="cr-discipline4">
 <div class="narrative">
 <p>Taking away privileges was associated with lower prosocial peer relations.</p>
 </div>
@@ -651,6 +653,7 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
 });
 </script>
 </div> <!-- /content -->
+<div class="page-columns page-rows-contents page-layout-article"><div class="social-share"><a href="https://www.linkedin.com/shareArticle?url=https://globalfamilies.quarto.pub/parenting/&amp;title=awesome page" target="_blank" class="linkedin"><i class="fa-brands fa-linkedin-in fa-fw fa-lg"></i></a>  <a href="mailto:?subject=awesome page&amp;body=Check out this link:https://globalfamilies.quarto.pub/parenting/" target="_blank" class="email"><i class="fa-solid fa-envelope fa-fw fa-lg"></i></a><a href="https://www.facebook.com/sharer.php?u=https://globalfamilies.quarto.pub/parenting/" target="_blank" class="facebook"><i class="fab fa-facebook-f fa-fw fa-lg"></i></a><a href="https://reddit.com/submit?url=https://globalfamilies.quarto.pub/parenting/&amp;title=awesome page" target="_blank" class="reddit">   <i class="fa-brands fa-reddit-alien fa-fw fa-lg"></i></a><a href="javascript:void(0);" onclick="var mastodon_instance=prompt('Mastodon Instance / Server Name?'); if(typeof mastodon_instance==='string' &amp;&amp; mastodon_instance.length){this.href='https://'+mastodon_instance+'/share?text=awesome page https://globalfamilies.quarto.pub/parenting/'}else{return false;}" target="_blank" class="mastodon"><i class="fa-brands fa-mastodon fa-fw fa-lg"></i></a><a href="https://bsky.app/intent/compose?text=https://globalfamilies.quarto.pub/parenting/ awesome page" target="_blank" class="bsky"><i class="fa-brands fa-bluesky"></i></a></div></div>
 
 
 
