--- a/parenting.html
+++ b/parenting.html
@@ -54,9 +54,9 @@ ul.task-list li input[type="checkbox"] {
       <!-- user-provided yaml closeread style options -->
       <style>
         :root {
-          --cr-narrative-text-color-sidebar: black;
+          --cr-narrative-background-color-sidebar: white;
+--cr-narrative-text-color-sidebar: black;
 --cr-section-background-color: white;
---cr-narrative-background-color-sidebar: white;
 --cr-narrative-background-color-overlay: grey;
         }
       </style>
@@ -84,12 +84,12 @@ ul.task-list li input[type="checkbox"] {
 
 <div class="cr-section cr-column-screen sidebar-left">
 <div class="narrative-col">
-<div class="trigger new-trigger" data-scale-by=".75" data-focus-on="cr-positiveparenting" data-pan-to="0%,0%">
+<div class="trigger new-trigger" data-pan-to="0%,0%" data-focus-on="cr-positiveparenting" data-scale-by=".75">
 <div class="narrative">
 <p>Parents raise their children in a variety of ways.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-scale-by="1.1" data-focus-on="cr-positiveparenting" data-pan-to="0%,0%">
+<div class="trigger new-trigger" data-pan-to="0%,0%" data-focus-on="cr-positiveparenting" data-scale-by="1.1">
 <div class="narrative">
 <p>The objective of this study was to test the associations between 11 caregiver aggressive and nonaggressive discipline behaviors and outcomes (aggression and prosocial peer relations) of children under 5 in low- and middle-income countries (LMICs).</p>
 </div>
@@ -103,32 +103,32 @@ ul.task-list li input[type="checkbox"] {
 </ul>
 </div>
 </div>
-<div class="trigger new-trigger" data-scale-by="1.0" data-focus-on="cr-discipline" data-pan-to="0%,0%">
+<div class="trigger new-trigger" data-pan-to="0%,0%" data-focus-on="cr-discipline" data-scale-by="1.0">
 <div class="narrative">
 <p>Different forms of discipline had different effects.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-scale-by="1.5" data-focus-on="cr-discipline" data-pan-to="50%,30%">
+<div class="trigger new-trigger" data-pan-to="50%,30%" data-focus-on="cr-discipline" data-scale-by="1.5">
 <div class="narrative">
 <p>Verbal reasoning (80%) and shouting (66%) were the most common parental discipline behaviors toward young children.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-scale-by="1.0" data-focus-on="cr-discipline" data-pan-to="0%,0%">
+<div class="trigger new-trigger" data-pan-to="0%,0%" data-focus-on="cr-discipline" data-scale-by="1.0">
 <div class="narrative">
 <p>Psychological and physical aggression had similar effects.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-scale-by="1.0" data-focus-on="cr-discipline2" data-pan-to="0%,0%">
+<div class="trigger new-trigger" data-pan-to="0%,0%" data-focus-on="cr-discipline2" data-scale-by="1.0">
 <div class="narrative">
 <p>Psychological and physical aggression were associated with higher child aggression.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-scale-by="1.0" data-focus-on="cr-discipline3" data-pan-to="0%,0%">
+<div class="trigger new-trigger" data-pan-to="0%,0%" data-focus-on="cr-discipline3" data-scale-by="1.0">
 <div class="narrative">
 <p>Verbal reasoning was associated with lower aggression and higher prosocial peer relations.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-scale-by="1.0" data-focus-on="cr-discipline4" data-pan-to="0%,0%">
+<div class="trigger new-trigger" data-pan-to="0%,0%" data-focus-on="cr-discipline4" data-scale-by="1.0">
 <div class="narrative">
 <p>Taking away privileges was associated with lower prosocial peer relations.</p>
 </div>
