added equation and tweaked image sizing

--- a/parenting.html
+++ b/parenting.html
@@ -41,6 +41,35 @@ ul.task-list li input[type="checkbox"] {
 <meta cr-debug-mode="false">
 <meta cr-remove-header-space="false">
 
+  <script src="https://cdnjs.cloudflare.com/polyfill/v3/polyfill.min.js?features=es6"></script>
+  <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml-full.js" type="text/javascript"></script>
+
+<script type="text/javascript">
+const typesetMath = (el) => {
+  if (window.MathJax) {
+    // MathJax Typeset
+    window.MathJax.typeset([el]);
+  } else if (window.katex) {
+    // KaTeX Render
+    var mathElements = el.getElementsByClassName("math");
+    var macros = [];
+    for (var i = 0; i < mathElements.length; i++) {
+      var texText = mathElements[i].firstChild;
+      if (mathElements[i].tagName == "SPAN") {
+        window.katex.render(texText.data, mathElements[i], {
+          displayMode: mathElements[i].classList.contains('display'),
+          throwOnError: false,
+          macros: macros,
+          fleqn: false
+        });
+      }
+    }
+  }
+}
+window.Quarto = {
+  typesetMath
+};
+</script>
 
 <link rel="stylesheet" href="_extensions/qmd-lab/closeread/closeread.css">
 <link rel="stylesheet" href="parenting.css">
@@ -54,10 +83,10 @@ ul.task-list li input[type="checkbox"] {
       <!-- user-provided yaml closeread style options -->
       <style>
         :root {
-          --cr-narrative-background-color-overlay: grey;
+          --cr-narrative-background-color-sidebar: white;
 --cr-narrative-text-color-sidebar: black;
+--cr-narrative-background-color-overlay: grey;
 --cr-section-background-color: white;
---cr-narrative-background-color-sidebar: white;
         }
       </style>
     
@@ -84,12 +113,12 @@ ul.task-list li input[type="checkbox"] {
 
 <div class="cr-section cr-column-screen sidebar-left">
 <div class="narrative-col">
-<div class="trigger new-trigger" data-pan-to="0%,0%" data-focus-on="cr-positiveparenting" data-scale-by=".75">
+<div class="trigger new-trigger" data-focus-on="cr-positiveparenting" data-scale-by=".75" data-pan-to="0%,0%">
 <div class="narrative">
 <p>Parents raise their children in a variety of ways.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-pan-to="0%,0%" data-focus-on="cr-positiveparenting" data-scale-by="1.1">
+<div class="trigger new-trigger" data-focus-on="cr-positiveparenting" data-scale-by="1.1" data-pan-to="0%,0%">
 <div class="narrative">
 <p>The objective of this study was to test the associations between 11 caregiver aggressive and nonaggressive discipline behaviors and outcomes (aggression and prosocial peer relations) of children under 5 in low- and middle-income countries (LMICs).</p>
 </div>
@@ -104,37 +133,37 @@ ul.task-list li input[type="checkbox"] {
 <p>Analyses were restricted to households with children under 5 years, leaving a sample of 229,465 respondents across 60 LMICs.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-mymap" data-scale-by="1.5">
+<div class="trigger new-trigger" data-focus-on="cr-equation" data-scale-by="1.25">
 <div class="narrative">
 <p>Data were analyzed using a statistical method known as Bayesian multilevel logistic regression.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-pan-to="0%,0%" data-focus-on="cr-discipline" data-scale-by="1.0">
+<div class="trigger new-trigger" data-focus-on="cr-discipline" data-scale-by="1.0" data-pan-to="0%,0%">
 <div class="narrative">
 <p>Different forms of discipline had different effects.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-pan-to="50%,30%" data-focus-on="cr-discipline" data-scale-by="1.5">
+<div class="trigger new-trigger" data-focus-on="cr-discipline" data-scale-by="1.5" data-pan-to="50%,30%">
 <div class="narrative">
 <p>Verbal reasoning (80%) and shouting (66%) were the most common parental discipline behaviors toward young children.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-pan-to="0%,0%" data-focus-on="cr-discipline" data-scale-by="1.0">
+<div class="trigger new-trigger" data-focus-on="cr-discipline" data-scale-by="1.0" data-pan-to="0%,0%">
 <div class="narrative">
 <p>Psychological and physical aggression had similar effects.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-pan-to="0%,0%" data-focus-on="cr-discipline2" data-scale-by="1.0">
+<div class="trigger new-trigger" data-focus-on="cr-discipline2" data-scale-by="1.0" data-pan-to="0%,0%">
 <div class="narrative">
 <p>Psychological and physical aggression were associated with higher child aggression.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-pan-to="0%,0%" data-focus-on="cr-discipline3" data-scale-by="1.0">
+<div class="trigger new-trigger" data-focus-on="cr-discipline3" data-scale-by="1.0" data-pan-to="0%,0%">
 <div class="narrative">
 <p>Verbal reasoning was associated with lower aggression and higher prosocial peer relations.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-pan-to="0%,0%" data-focus-on="cr-discipline4" data-scale-by="1.0">
+<div class="trigger new-trigger" data-focus-on="cr-discipline4" data-scale-by="1.0" data-pan-to="0%,0%">
 <div class="narrative">
 <p>Taking away privileges was associated with lower prosocial peer relations.</p>
 </div>
@@ -149,22 +178,22 @@ ul.task-list li input[type="checkbox"] {
 <p>However, the associations of discipline with child outcomes were still largely consistent across countries.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-positiveparenting" data-scale-by=".5">
+<div class="trigger new-trigger" data-focus-on="cr-positiveparenting" data-scale-by=".6">
 <div class="narrative">
 <p>Psychological and physical aggression were disadvantageous for children’s socio-emotional development across countries.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-positiveparenting" data-scale-by=".6">
+<div class="trigger new-trigger" data-focus-on="cr-positiveparenting" data-scale-by=".7">
 <div class="narrative">
 <p>Only verbal reasoning was associated with positive child socio-emotional development.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-positiveparenting" data-scale-by=".7">
+<div class="trigger new-trigger" data-focus-on="cr-positiveparenting" data-scale-by=".8">
 <div class="narrative">
-<p>No form of psychological aggression or physical aggression benefited child socioemotional development in any country.</p>
+<p>No form of psychological aggression or physical aggression benefited child socio-emotional development in any country.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-positiveparenting" data-scale-by=".75">
+<div class="trigger new-trigger" data-focus-on="cr-positiveparenting" data-scale-by=".9">
 <div class="narrative">
 <p>Greater emphasis should be dedicated to reducing parental use of psychological and physical aggression across cultural contexts.</p>
 </div>
@@ -255,6 +284,9 @@ ul.task-list li input[type="checkbox"] {
 <figcaption>Positive Parenting</figcaption>
 </figure>
 </div>
+</div>
+<div id="cr-equation" class="sticky">
+<p><span class="math display">\[\ln \left( \frac{p(\text{outcome})}{1- p(\text{outcome})} \right) = \beta_0 + \Sigma \beta_k \text{discipline}_k + \Sigma \beta_m \text{covariate}_m + u_{0j}  \]</span></p>
 </div>
 </div>
 </div>
