--- a/be-less-wrong/be-less-wrong.html
+++ b/be-less-wrong/be-less-wrong.html
@@ -76,10 +76,10 @@ div.csl-indent {
       <!-- user-provided yaml closeread style options -->
       <style>
         :root {
-          --cr-section-background-color: white;
+          --cr-narrative-text-color-sidebar: black;
 --cr-narrative-background-color-sidebar: white;
+--cr-section-background-color: white;
 --cr-narrative-background-color-overlay: grey;
---cr-narrative-text-color-sidebar: black;
         }
       </style>
     
@@ -112,32 +112,32 @@ div.csl-indent {
 
 <div class="cr-section cr-column-screen sidebar-left">
 <div class="narrative-col">
-<div class="trigger new-trigger" data-focus-on="cr-earth" data-pan-to="0%,0%" data-scale-by="1">
+<div class="trigger new-trigger" data-focus-on="cr-earth" data-scale-by="1" data-pan-to="0%,0%">
 <div class="narrative">
 <p>Across the globe, there are definite concrete <em>realities</em> of abuse, neglect, suffering, exploitation, violence, discrimination, and other associated problems that we are trying to understand, and to reduce.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-scale-by="1" data-focus-on="cr-martinbaro">
+<div class="trigger new-trigger" data-focus-on="cr-martinbaro" data-scale-by="1">
 <div class="narrative">
 <p>We hope that our research will inform efforts to change these <em>realities</em>. Yet, at the same time we must recognize that our understandings are at best <em>iterative</em> and <em>contingent.</em> While we will never have a perfect understanding of social reality, we can always improve our understandings, and move in the direction of being <em>less wrong</em>.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-scale-by="1" data-focus-on="cr-silverman">
+<div class="trigger new-trigger" data-focus-on="cr-silverman" data-scale-by="1">
 <div class="narrative">
 <p>As <span class="citation" data-cites="Silverman1998">Silverman (<a href="#ref-Silverman1998" role="doc-biblioref">1998</a>)</span> wrote:</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-scale-by="1" data-focus-on="cr-box">
+<div class="trigger new-trigger" data-focus-on="cr-box" data-scale-by="1">
 <div class="narrative">
 <p>This recalls the famous saying by the statistician George Box about statistical models, reported in many places, and well captured in the passage below by <span class="citation" data-cites="Hand2014">Hand (<a href="#ref-Hand2014" role="doc-biblioref">2014</a>)</span>:</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-scale-by="1" data-focus-on="cr-box2">
+<div class="trigger new-trigger" data-focus-on="cr-box2" data-scale-by="1.25">
 <div class="narrative">
 <p>A key task then, of using quantitative methods is to use them to try to be progressively <em>less wrong</em> about the answers we are finding to important questions about improving human wellbeing.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-scale-by="3" data-focus-on="cr-flowchart">
+<div class="trigger new-trigger" data-focus-on="cr-flowchart" data-scale-by="3">
 <div class="narrative">
 <p>Let’s consider some simple visual models based upon some simulated data. Two key variables in this model are <em>intervention</em> (a treatment or program that we hope does some good), and the <em>outcome</em> (an improved or beneficial mental health or psychological outcome).</p>
 </div>
@@ -157,17 +157,17 @@ div.csl-indent {
 
 </div>
 </div>
-<div class="trigger new-trigger" data-scale-by="1" data-focus-on="cr-p0">
+<div class="trigger new-trigger" data-focus-on="cr-p0" data-scale-by="1">
 <div class="narrative">
 <p>Here is a first model. What do these results say about the relationship of the <em>intervention</em> and the <em>outcome</em>?</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-scale-by="1" data-focus-on="cr-notrecommended">
+<div class="trigger new-trigger" data-focus-on="cr-notrecommended" data-scale-by="1">
 <div class="narrative">
 <p>These simple straightforward results suggest that the <em>intervention</em> is associated with a worsening of the <em>outcome</em>.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-scale-by="1" data-focus-on="cr-p0-group">
+<div class="trigger new-trigger" data-focus-on="cr-p0-group" data-scale-by="1">
 <div class="narrative">
 <p>Let’s now consider a slightly more complex model. In addition to examining the <em>intervention</em> and the <em>outcome</em>, we account for the fact that individuals come from different <em>groups</em>. This could be any kind of group, e.g.&nbsp;a racial, ethnic, religious, cultural, or economic group.</p>
 </div>
@@ -391,9 +391,6 @@ The Intervention is <em>Not</em> Recommended
 </div>
 <div id="cr-p0-group" class="sticky">
 <div class="cell">
-<div class="cell-output cell-output-stderr">
-<pre><code>`geom_smooth()` using formula = 'y ~ x'</code></pre>
-</div>
 <div class="cell-output-display">
 <div id="fig-p0-group" class="quarto-float quarto-figure quarto-figure-center anchored" width="4200">
 <figure class="quarto-float quarto-float-fig figure">
